--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,12 @@ services:
             - 9229:9229
         depends_on:
             - mongo
+            - elasticsearch
+        links:
+            - elasticsearch
         networks:
             - nesjs-network
+            - elasticsearch-network
         volumes:
             - ./tiktok:/usr/src/app
             - /usr/src/app/node_modules
@@ -44,8 +48,36 @@ services:
         image: mongo
         restart: always
         volumes:
-          - ./data:/data/db
+            - ./data:/data/db
         ports:
-          - "27017:27017"
+            - "27017:27017"
+    kibana:
+        image: docker.elastic.co/kibana/kibana:7.14.1
+        container_name: MY_KIBANA
+        ports:
+            - 5601:5601
+        environment:
+            ELASTICSEARCH_URL: http://elasticsearch:9200
+            ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+        depends_on:
+            - elasticsearch
+        links:
+            - elasticsearch
+        networks: 
+            - elasticsearch-network
+
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.14.1
+        container_name: MY_ELASTICSEARCH
+        ports: 
+            - 9200:9200
+            - 9300:9300
+        environment:
+            discovery.type: single-node
+        volumes:
+            - ./esdata/:/usr/share/elasticsearch/data/
+        networks:
+            - elasticsearch-network
 networks:
     nesjs-network:
+    elasticsearch-network:
