--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -22,10 +22,17 @@
   "dependencies": {
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/swagger": "^5.2.1",
+    "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "swagger-ui-express": "^4.4.0",
+    "triple-beam": "^1.3.0",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.3",
