--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
             - elasticsearch
             - mongo-express
             - kibana
+            - redis
+            - nginx
         networks:
             - nesjs-network
             - elasticsearch-network
@@ -40,6 +42,8 @@ services:
             - elasticsearch
             - mongo-express
             - kibana
+            - redis
+            - nginx
         networks:
             - nesjs-network
             - elasticsearch-network
@@ -83,6 +87,20 @@ services:
     elasticsearch:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.14.1
         container_name: MY_ELASTICSEARCH
+        environment:
+            - node.name=elasticsearch
+            - http.port=9200
+            - http.host=0.0.0.0
+            - transport.host=127.0.0.1
+            - cluster.name=es-docker-cluster
+            - discovery.seed_hosts=elasticsearch
+            - cluster.initial_master_nodes=elasticsearch
+            - bootstrap.memory_lock=true
+            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+        ulimits:
+        memlock:
+            soft: -1
+            hard: -1
         ports: 
             - 9200:9200
             - 9300:9300
@@ -92,6 +110,14 @@ services:
             - ./esdata/:/usr/share/elasticsearch/data/
         networks:
             - elasticsearch-network
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '6379:6379'
+    nginx:
+        build: ./nginx
+        ports:
+        - '80:80'
 networks:
     nesjs-network:
         driver: bridge
