--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -20,18 +20,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.2.1",
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/elasticsearch": "^8.1.0",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.1",
+    "@types/validator": "^13.7.4",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
+    "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.4.0",
     "triple-beam": "^1.3.0",
+    "typeorm": "^0.3.7",
     "winston": "^3.8.1"
   },
   "devDependencies": {
