--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,6 @@ services:
         container_name: mongo
         image: mongo
         restart: always
-        
         networks:
             - nesjs-network
         volumes:
@@ -66,6 +65,8 @@ services:
         restart: always
         ports:
             - "28081:8081"
+        networks:
+            - nesjs-network
         depends_on:
             - mongo
     kibana:
