--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -24,14 +24,19 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/elasticsearch": "^8.1.0",
+    "@nestjs/microservices": "^8.4.7",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/typeorm": "^8.1.4",
     "@types/validator": "^13.7.4",
+    "cache-manager": "^4.0.1",
+    "cache-manager-ioredis": "^2.1.0",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
+    "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -44,6 +49,8 @@
     "@nestjs/cli": "^8.1.3",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
+    "@types/cache-manager": "^4.0.1",
+    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
