--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/typeorm": "^8.1.4",
     "@types/validator": "^13.7.4",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
