--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -24,11 +24,14 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/elasticsearch": "^8.1.0",
+    "@nestjs/jwt": "^8.0.1",
     "@nestjs/microservices": "^8.4.7",
     "@nestjs/mongoose": "^9.1.1",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.4",
+    "@types/passport": "^1.0.9",
     "@types/validator": "^13.7.4",
     "cache-manager": "^4.0.1",
     "cache-manager-ioredis": "^2.1.0",
@@ -36,6 +39,8 @@
     "dotenv": "^16.0.1",
     "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
