--- a/tiktok/.env.example
+++ b/tiktok/.env.example
@@ -4,3 +4,5 @@ LOGLEVEL=info
 MONGO=mongodb://mongo:27017/tiktok
 REDIS_HOST=redis
 REDIS_PORT=6379
+TWILIO_ACCOUNT_SID=AC9f55fe8ae55dc0b607809c13c9682163
+TWILIO_AUTH_TOKEN=066e58d6adb0e2df7b39d16fb916d8d3
