--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.0.1",
     "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
+    "nestjs-twilio": "^2.2.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^4.2.0",
@@ -47,6 +48,7 @@
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.4.0",
     "triple-beam": "^1.3.0",
+    "twilio": "^3.78.0",
     "typeorm": "^0.3.7",
     "winston": "^3.8.1"
   },
