--- a/tiktok/.env.example
+++ b/tiktok/.env.example
@@ -6,3 +6,4 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 TWILIO_ACCOUNT_SID=AC9f55fe8ae55dc0b607809c13c9682163
 TWILIO_AUTH_TOKEN=066e58d6adb0e2df7b39d16fb916d8d3
+TWILIO_PHONE_NUMBER=MG5ce11b628662b65b653f6abede8066b6
