--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/elasticsearch": "^8.1.0",
