--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.3",
+    "@nestjs/config": "^1.2.1",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
     "@types/cache-manager": "^4.0.1",
@@ -62,6 +63,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "argon2": "^0.28.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
