--- a/tiktok/package.json
+++ b/tiktok/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "fix:all": "npm run format && npm run lint"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
@@ -26,6 +27,7 @@
     "@nestjs/core": "^8.1.1",
     "@nestjs/elasticsearch": "^8.1.0",
     "@nestjs/jwt": "^8.0.1",
+    "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/microservices": "^8.4.7",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/passport": "^8.2.2",
