--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,8 @@
-upstream loadbalancer {
-    server dev:3000;
-}
-
 server {
     listen 80;
     server_name localhost;
     location / {
-        proxy_pass http://loadbalancer;
+        proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
