--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
-/tiktok/node_modules
-/tiktok/npm-debug.log
-/tiktok/Dockerfile
-/tiktok/package-lock.json
+node_modules
+npm-debug.log
+Dockerfile
+package-lock.json
 .dockerignore
