--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         container_name: nestjs_api_dev
         image: nestjs-api-dev:1.0.0
         build:
-            context: ./tiktok
+            context: ./
             target: development
             dockerfile: ./Dockerfile
         command: npm run start:debug
@@ -23,14 +23,14 @@ services:
             - nesjs-network
             - elasticsearch-network
         volumes:
-            - ./tiktok:/usr/src/app
+            - ./:/usr/src/app
             - /usr/src/app/node_modules
         restart: unless-stopped
     prod:
         container_name: nestjs_api_prod
         image: nestjs-api-prod:1.0.0
         build:
-            context: ./tiktok
+            context: ./
             target: production
             dockerfile: ./Dockerfile
         command: npm run start:prod
@@ -48,7 +48,7 @@ services:
             - nesjs-network
             - elasticsearch-network
         volumes:
-            - ./tiktok:/usr/src/app
+            - ./:/usr/src/app
             - /usr/src/app/node_modules
         restart: unless-stopped
     mongo:
