--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,15 +5,15 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "release.v0.1" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "release.v0.1" ]
   issues:
     types: [opened, reopened, deleted, closed]
 jobs:
   notify:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Send notifications to Telegram
@@ -22,13 +22,11 @@ jobs:
         MESSAGE: "Issue ${{ github.event.action }}: \n${{ github.event.issue.html_url }}"
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -38,4 +36,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm run start:prod
