--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,5 +35,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run start:prod
+    - run: pm2 stop 0
+    - run: pm2 start 0
+    # - run: npm run start:prod
+    - run: sudo systemctl restart nginx
