--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ SECRET=kXp2r5u8x/A?D(G+KbPeShVmYq3t6v9y
 ENV=development
 PORT=3000
 LOGLEVEL=info
-MONGO=mongodb://mongo:27017/tiktok
-REDIS_HOST=redis
+MONGO=mongodb://localhost:27017/tiktok
+REDIS_HOST=localhost
 REDIS_PORT=6379
 TWILIO_ACCOUNT_SID=AC9f55fe8ae55dc0b607809c13c9682163
 TWILIO_AUTH_TOKEN=066e58d6adb0e2df7b39d16fb916d8d3
