--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ TWILIO_PHONE_NUMBER=MG5ce11b628662b65b653f6abede8066b6
 URL_LIVE=https://zqzb.vip/api/login
 EMAIL_LIVE=thaibaovu111@gmail.com
 PASSWORD_LIVE=Hack@23478945678
+ELASTIC_SEARCH_URL=http://elasticsearch:9200/
+ELASTIC_SEARCH_HOST=elasticsearch
+ELASTIC_SEARCH_PORT=9200
