--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ TWILIO_ACCOUNT_SID=AC9f55fe8ae55dc0b607809c13c9682163
 TWILIO_AUTH_TOKEN=066e58d6adb0e2df7b39d16fb916d8d3
 TWILIO_PHONE_KEY=MG5ce11b628662b65b653f6abede8066b6
 TWILIO_PHONE_NUMBER=+639221200553
-URL_LIVE=https://zqzb.vip/api/login
+URL_LIVE=https://chich1.com/api/login
 EMAIL_LIVE=thaibaovu111@gmail.com
 PASSWORD_LIVE=Hack@23478945678
 ELASTIC_SEARCH_URL=http://elasticsearch:9200/
