Add create up file.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ URL_LIVE=https://chich1.com/api/login
 EMAIL_LIVE=thaibaovu111@gmail.com
 PASSWORD_LIVE=Hack@23478945678
 ELASTIC_SEARCH_URL=http://elasticsearch:9200/
+UPLOAD_LOCATION=../../public
+MAX_FILE_SIZE=5
