--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.1",
     "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
+    "mongoose": "^6.5.2",
     "nestjs-twilio": "^2.2.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
