--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/validator": "^13.7.4",
     "cache-manager": "^4.0.1",
     "cache-manager-ioredis": "^2.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "elasticsearch": "^16.7.3",
