--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "elasticsearch": "^16.7.3",
     "moment": "^2.29.3",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "nestjs-twilio": "^2.2.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -66,6 +67,7 @@
     "@types/cache-manager-ioredis": "^2.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
