--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ ELASTIC_SEARCH_URL=http://localhost:9200/
 UPLOAD_LOCATION=../../public
 MAX_FILE_SIZE=5
 URL_IMAGE=http://localhost:3000/api/v1/search/image/
+URL_DOMAIN_SERVER=https://toptop.host
