--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-    - run: cp -r public/* /tmp/public
+    - run: cp -r public /tmp
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
