--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "nestjs-twilio": "^2.2.1",
+    "papaparse": "^5.3.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^4.2.0",
