fix: error eslint

--- a/.gitignore
+++ b/.gitignore
@@ -401,5 +401,6 @@ esdata
 .env
 dist
 public
-src/components/config/Dev Tools - Elastic_files
-src/components/config/Dev Tools - Elastic.html
+src/config/Dev Tools - Elastic_files
+src/config/Dev Tools - Elastic.html
+src/config/
